# modbus-crc

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-windows.yml
resources/: resources.qrc
resources/win32/: app.rc.in
src/: crc_calculator.cpp  crc_calculator.h  hex_parser.cpp  hex_parser.h  main.cpp  main_window.cpp  main_window.h
